src/test/ui/osx-frameworks.stderr
error[E0455]: native frameworks are only available on macOS targets
  --> $DIR/osx-frameworks.rs:3:1
   |
LL | #[link(name = "foo", kind = "framework")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0455`.
